tests/baselines/reference/literalsInComputedProperties1.errors.txt
literalsInComputedProperties1.ts(20,1): error TS2454: Variable 'y' is used before being assigned.
literalsInComputedProperties1.ts(21,1): error TS2454: Variable 'y' is used before being assigned.
literalsInComputedProperties1.ts(22,1): error TS2454: Variable 'y' is used before being assigned.
literalsInComputedProperties1.ts(23,1): error TS2454: Variable 'y' is used before being assigned.
literalsInComputedProperties1.ts(33,1): error TS2454: Variable 'z' is used before being assigned.
literalsInComputedProperties1.ts(34,1): error TS2454: Variable 'z' is used before being assigned.
literalsInComputedProperties1.ts(35,1): error TS2454: Variable 'z' is used before being assigned.
literalsInComputedProperties1.ts(36,1): error TS2454: Variable 'z' is used before being assigned.
literalsInComputedProperties1.ts(39,5): error TS2452: An enum member cannot have a numeric name.
literalsInComputedProperties1.ts(40,5): error TS2452: An enum member cannot have a numeric name.
literalsInComputedProperties1.ts(41,5): error TS2452: An enum member cannot have a numeric name.
literalsInComputedProperties1.ts(42,5): error TS2452: An enum member cannot have a numeric name.


==== literalsInComputedProperties1.ts (12 errors) ====
    let x = {
        1:1,
        [2]:1,
        "3":1,
        ["4"]:1
    }
    x[1].toExponential();
    x[2].toExponential();
    x[3].toExponential();
    x[4].toExponential();
    
    interface A {
        1:number;
        [2]:number;
        "3":number;
        ["4"]:number;
    }
    
    let y:A;
    y[1].toExponential();
    ~
!!! error TS2454: Variable 'y' is used before being assigned.
    y[2].toExponential();
    ~
!!! error TS2454: Variable 'y' is used before being assigned.
    y[3].toExponential();
    ~
!!! error TS2454: Variable 'y' is used before being assigned.
    y[4].toExponential();
    ~
!!! error TS2454: Variable 'y' is used before being assigned.
    
    class C {
        1:number;
        [2]:number;
        "3":number;
        ["4"]:number;
    }
    
    let z:C;
    z[1].toExponential();
    ~
!!! error TS2454: Variable 'z' is used before being assigned.
    z[2].toExponential();
    ~
!!! error TS2454: Variable 'z' is used before being assigned.
    z[3].toExponential();
    ~
!!! error TS2454: Variable 'z' is used before being assigned.
    z[4].toExponential();
    ~
!!! error TS2454: Variable 'z' is used before being assigned.
    
    enum X {
        1 = 1,
        ~
!!! error TS2452: An enum member cannot have a numeric name.
        [2] = 2,
        ~~~
!!! error TS2452: An enum member cannot have a numeric name.
        "3" = 3,
        ~~~
!!! error TS2452: An enum member cannot have a numeric name.
        ["4"] = 4,
        ~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
        "foo" = 5,
        ["bar"] = 6
    }
    
    let a = X["foo"];
    let a0 = X["bar"];
    
    // TODO: make sure that enum still disallow template literals as member names